--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 	<head>
 		<title>Code Quiz</title>
 		<meta charset="UTF-8">
-		<link href="assets/.css" rel="stylesheet" type="text/css">
-        <script src = "assets/.js" type="text/javascript"></script>
+		<link href="assets/style.css" rel="stylesheet" type="text/css">
 	</head>
 	<body>
 		<div id="nav">
@@ -31,4 +30,5 @@
             </div>
         </div>
 	</body>
+	<script src="assets/script.js" ></script>
 </html>
