--- a/index.html
+++ b/index.html
@@ -5,15 +5,16 @@
 		<title>Code Quiz</title>
 		<meta charset="UTF-8">
 		<link href="assets/style.css" rel="stylesheet" type="text/css">
+        <script src = "assets/script.js"></script>
 	</head>
 	<body>
 		<div id="nav">
 			<!-- VIEW SCORES-->
-			<div class="left">
+			<div class="score">
                 <a onclick="getScore()" href="#"><h4 >View Highscore</h4></a>
 			</div>
 			<!-- TIMER-->
-			<div class="right">
+			<div class="time">
 				<h4>Time: <span id="timeLeft">0</span></h4>
 			</div>
 		</div>
@@ -30,5 +31,4 @@
             </div>
         </div>
 	</body>
-	<script src="assets/script.js" ></script>
 </html>
